# sturdy-broccoli

./: Cargo.toml
src/: lib.rs
src/api/: train.rs
src/models/: mod.rs
src/models/gpt/: model.rs
src/nn/: causal_self_attention.rs  gpt.rs  layer_norm.rs  mlp.rs  mod.rs
src/utils/data/: causal_language_modeling.rs  mod.rs
