[package]
name = "nlp"
version = "0.1.0"
edition = "2021"

[features]
wgpu = ["burn/wgpu"]
candle = ["burn/candle"]
ndarray = ["burn/ndarray"]

[dependencies]
anyhow = "1.0.86"
burn = { version = "0.13.2", features = ["sqlite", "train"] }
clap = { version = "4.5.13", features = ["cargo"] }
derive-new = "0.6.0"
serde = { version = "1.0.204", features = ["std", "derive"] }
tokenizers = "0.19.1"

[dev-dependencies]
burn = { version = "0.13.2", features = ["ndarray"] }
